# Panthera-HT_SDK

./: .gitignore  README.md
1_Panthera-HT_Model/1_sw2024/: 5047Rotor-Link_Connect.SLDPRT  5047Stator-Link_Connect_A.SLDPRT  5047Stator-Link_Connect_B.SLDPRT  6056Rotor-Link_Connect.SLDPRT  6056Stator-Link_Connect_A.SLDPRT  6056Stator-Link_Connect_B.SLDPRT  Baselink_A.SLDPRT  Baselink_B.SLDPRT  Baselink_C.SLDPRT  Bearing25x32x4.SLDPRT  Flanged_Bearing4x9x2.5.SLDPRT  FollowArm-Gripper_Assembly.SLDASM  FollowArm_Link1.SLDASM  FollowArm_Link4.SLDASM  FollowArm_Link5.SLDASM  FollowArm_Link6.SLDASM  Gripper-Arm_Connect_A.SLDPRT  Gripper-Camera_Connect_A.SLDPRT  Gripper_Connect_A.SLDPRT  Gripper_Connect_B.SLDPRT  Gripper_Connect_C.SLDPRT  Gripper_Connect_D.SLDPRT  Gripper_Connect_E.SLDPRT  Gripper_Connect_F.SLDPRT  Gripper_Connect_G.SLDPRT  Gripper_Connect_I.SLDPRT  Gripper_finger_Flexible_umi.SLDPRT  L1_A.SLDPRT  L1_Cover_A.SLDPRT  L1_D.SLDPRT  L2_A.SLDPRT  L2_B.SLDPRT  L2_Cover_A.SLDPRT  L2_Cover_B.SLDPRT  L2_Cover_C.SLDPRT  L2_Cover_D.SLDPRT  L2_E.SLDPRT  L3_A.SLDPRT  L3_B.SLDPRT  L3_Cover_A.SLDPRT  (+20 more)
2_Panthera-HT_SDK/install_scripts/: Interface_cpp_setup.sh
2_Panthera-HT_SDK/panthera_cpp/: CMakeLists.txt
2_Panthera-HT_SDK/panthera_cpp/robot_param/: robot_config.yaml
2_Panthera-HT_SDK/panthera_python/: .gitignore  README.md  pyproject.toml  setup.py
2_Panthera-HT_SDK/panthera_python/Panthera-HT_description/urdf/: Panthera-HT_description_follower.urdf
2_Panthera-HT_SDK/panthera_python/hightorque_robot/: __init__.py  utils.py
2_Panthera-HT_SDK/panthera_python/robot_param/: Follower.yaml
2_Panthera-HT_SDK/panthera_python/scripts/: 0_robot_get_state.py  0_robot_set_zero.py  1_PD_control.py  1_PosVel_control.py  1_forward_kinematics_test.py  1_inverse_kinematics_test.py  2_Jointimpendence_control_with_gra_fri_pd.py  2_Jointimpendence_control_with_gra_pd.py  2_gravity_compensation_control.py  2_gravity_friction_compensation_control.py  2_inv_PosVel_control.py  3_gravity_compensation_with_fk.py  3_interpolation_control_nozeroVel.py  3_interpolation_control_zeroVel.py  3_sin_trajectory_control.py  4_impedance_trajectory_control_with_gra_pd.py  5_record_trajectory.py  5_replay_trajectory.py
2_Panthera-HT_SDK/panthera_python/scripts/Panthera_lib/: Panthera.py  recorder.py
2_Panthera-HT_SDK/panthera_python/scripts/motor_example/: motor_control.py
Panthera-HT_SDK/install_scripts/: Interface_python_setup.sh
panthera_cpp/motor_cpp/src/hardware/: robot.cpp
panthera_python/: README.md  requirements.txt
panthera_python/Panthera-HT_description/urdf/: Panthera-HT_description_follower.urdf
panthera_python/motor_whl/: hightorque_robot-1.1.0-cp310-cp310-linux_x86_64.whl  hightorque_robot-1.1.0-cp312-cp312-linux_x86_64.whl  hightorque_robot-1.1.0-cp39-cp39-linux_x86_64.whl
panthera_python/robot_param/: Follower.yaml  Leader.yaml
panthera_python/scripts/: 0_robot_get_state.py  1_Joints_Sync_Arrival_control.py  2_gravity_compensation_control.py  2_inv_PosVel_control.py  3_sin_trajectory_control.py  5_record_trajectory.py  5_replay_trajectory.py  5_teleop_control.py  trajectory_test_1.jsonl
panthera_python/scripts/Panthera_lib/: Panthera.py  recorder.py
